# mcp

./: .gitignore  README.md  README2.md  README3.md  README_deploy.md  deploy_to_cline.sh  pyproject.toml
docs/: API.md  BEST_PRACTICES.md  CLINE_SETUP.md  MIGRATION_GUIDE.md  QUICK_START.md
docs/examples/: claude_desktop_config.json  claude_desktop_config_with_api_key.json  cline_mcp_config.json  recommended_gitignore
src/moatless_mcp/: __init__.py  server.py  server_old.py
src/moatless_mcp/adapters/: workspace.py
src/moatless_mcp/project_understand/: AGraphGenerate.py  ModuleChat.py  __init__.py  dataProcess.py  util.py
src/moatless_mcp/tools/: advanced_search.py  advanced_tools.py  base.py  file_operations.py  project_understand.py  registry.py  search_tools.py  semantic_search.py  testing.py  vector_tools.py  verilog_tools.py
src/moatless_mcp/treesitter/: __init__.py  languages.py  parser.py  queries.py
src/moatless_mcp/utils/: config.py
src/moatless_mcp/vector/: __init__.py  code_splitter.py  embeddings.py  index.py  manager.py
tests/: conftest.py  test_enhanced_features.py  test_file_operations.py  test_search_tools.py  test_server.py  test_workspace.py
